--- a/Index.html
+++ b/Index.html
@@ -30,6 +30,7 @@
                     <h3>Access Confidential Patient Information</h3>
                 </hgroup>
                 <p>Please enter the password to access patient data.</p>
+                <p class="password-reveal">Demo Password: <strong>abc</strong></p> <!-- Password reveal -->
                 <form id="passwordForm">
                     <input type="password" id="passwordInput" placeholder="Enter password" required>
                     <button type="submit">Access</button>
